@@ -148,7 +148,7 @@ def Playvid(url, name):
 
 @site.register()
 def List2(url):
-    site.add_download_link('[COLOR red][B]Refresh[/B][/COLOR]', url, 'Refresh', '', '', noDownload=True)
+    site.add_download_link('[COLOR red][B]Refresh[/B][/COLOR]', url, 'utils.refresh', '', '', noDownload=True)
     if utils.addon.getSetting("online_only") == "true":
         url = url + '?online_only=1'
         site.add_download_link('[COLOR red][B]Show all models[/B][/COLOR]', url, 'online', '', '', noDownload=True)
@@ -173,7 +173,7 @@ def List2(url):
 
 @site.register()
 def List3(url):
-    site.add_download_link('[COLOR red][B]Refresh[/B][/COLOR]', url, 'Refresh', '', '', noDownload=True)
+    site.add_download_link('[COLOR red][B]Refresh[/B][/COLOR]', url, 'utils.refresh', '', '', noDownload=True)
     if utils.addon.getSetting("online_only") == "true":
         url = url + '?online_only=1'
         site.add_download_link('[COLOR red][B]Show all models[/B][/COLOR]', url, 'online', '', '', noDownload=True)
@@ -195,14 +195,9 @@ def List3(url):
 
 
 @site.register()
-def Refresh():
-    utils.Refresh()
-
-
-@site.register()
 def online(url):
     if utils.addon.getSetting("online_only") == "true":
         utils.addon.setSetting("online_only", "false")
     else:
         utils.addon.setSetting("online_only", "true")
-    utils.Refresh()
+    utils.refresh()
