@@ -1,3 +1,4 @@
 [B]Version 1.1.12[/B]
 Added Stripchat webcams
 Chaturbate Added Online Favorites
+One time Search function added
